# ml-edge

./: .gitignore  .pre-commit-config.yaml  README.md
0_introduction_to_tensorflow/: README.md  introduction_to_tensorflow.ipynb  pyproject.toml  using_tensorflow_as_a_calculator.ipynb
0_natural_language_processing/: 4_forecasting_with_RNNs.ipynb  README.md
1_model_deployment/: .gitignore  Dockerfile  Makefile  README.md  instances.json  pyproject.toml  requirements.txt  train_model.py
1_model_deployment/app/: main.py  prediction_service.py
2_large_language_models/: README.md  pyproject.toml
2_large_language_models/app/client/src/routes/: +page.svelte
2_large_language_models/data/: .gitignore
2_large_language_models/llm_masterclass/: google_news.py  plotting_utils.py  similar_words.py
2_large_language_models/ml_project_1_similar_words/: Makefile  app.py  processing.py
2_large_language_models/ml_project_1_similar_words/tests/: test_processing.py
2_large_language_models/ml_project_2_sentiment_analysis_application/: README.md
2_large_language_models/ml_project_2_sentiment_analysis_application/backend/: Makefile  README.md  api.py  requirements.txt
2_large_language_models/ml_project_2_sentiment_analysis_application/client/: Makefile  README.md  package.json
2_large_language_models/notebooks/: .gitignore  1_wikipedia_prevalence_of_personal_attacks.ipynb  2_getting_familiar_with_using_transformers.ipynb  3_visualizing_word2vec_embeddings_with_tSNE.ipynb  4_forecasting_with_RNNs.ipynb  5_text_processing_with_sequence_models.ipynb  6_explaining_sequence_models_with_integrated_gradients.ipynb  7_learning_to_prompt.ipynb  8_retrieval_augmented_qa_investment_demo.ipynb
2_large_language_models/notebooks/shakespeare_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
2_large_language_models/notebooks/shakespeare_model/variables/: variables.data-00000-of-00001  variables.index
2_large_language_models/tests/: test_can_import_llm_masterclass.py
2_natural_language_processing/: pyproject.toml
2_natural_language_processing/app/: README.md
2_natural_language_processing/app/backend/: .gitignore  Makefile  README.md
2_natural_language_processing/app/client/: package-lock.json
2_natural_language_processing/llm_masterclass/: download_utils.py
3_computer_vision/: 1_edge_detection.ipynb  2_building_a_cnn_and_exploring_diffusion_models.ipynb  3_model_registry_endpoints_and_explanations.ipynb  4_Convolutions from Scratch.ipynb  5_Image Classification with BigTransfer.ipynb  5_model_registry_endpoints_and_explanations.ipynb  6_face_detection_representation_recognition_ann.ipynb  7_fine_tune_resnet_on_celebrities.ipynb  8_a_quick_detour_around_encoding_and_io.ipynb
3_computer_vision/ml_project_4_face_detection/: README.md
3_computer_vision/ml_project_4_face_detection/backend/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  image_utils.py  pyproject.toml  recognition.py  service_layer.py  test_cloud_vision.py  test_image_utils.py  test_recognition.py
3_computer_vision/ml_project_4_face_detection/frontend/: Makefile  README.md  package-lock.json
3_computer_vision/ml_project_4_face_detection/frontend/src/routes/: +page.svelte
cv/: 1_edge_detection.ipynb
lm/: 1_wikipedia_prevalence_of_personal_attacks.ipynb  2_getting_familiar_with_using_transformers.ipynb  3_visualizing_word2vec_embeddings_with_tSNE.ipynb  4_forecasting_with_RNNs.ipynb  5_text_processing_with_sequence_models.ipynb  6_explaining_sequence_models_with_integrated_gradients.ipynb
